2010-12-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	Work around a bug in file-inclusion mechanism of Solaris make.
	* automake.in (handle_single_transform): In the name of the
	dependency file: collapse multiple slash characters into a single
	one.
	* tests/subobj11a.test: New test.
	* tests/subobj11b.test: Likewise.
	* tests/subobj11c.test: Likewise.
	* tests/depcomp8a.test: Likewise.
	* tests/depcomp8b.test: Likewise.
	* tests/Makefile.am (TESTS): Updated.
	* NEWS: Updated.
	Report by Stefano Lattarini, quick fix by Ralf Wildenhues, final
	patch and tests by Stefano Lattarini.

2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix two spurious testsuite failures on IRIX 6.5.
	* tests/suffix13.test (Makefile.am): Account for VPATH issues on
	weaker make implementations (e.g. IRIX 6.5).
	* tests/parallel-tests8.test: Likewise, plus a required related
	change.
	Reported by Ralf Wildenhues.  The bugs have been there from the
	first versions of the affected test scripts.

2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: cygnus mode doesn't require AM_CYGWIN32 macro.
	* doc/automake.texi (Cygnus): Mode 'cygnus' does not require
	the AM_CYGWIN32 macro (and indeed hasn't required it since at
	least commit Release-1-2-31-g3038064 "merged changes from
	Cygnus" of 1997-08-25).

2010-12-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	distlinksbrk.test: Work around botched "make -k".
	* tests/distlinksbrk.test: Run "make" multiple times and grep
	its output each time for a single error message, rather than
	running "make -k" one single time and grepping its output for
	all the expected error messages.  This should work around make
	implementations with limited (broken?) `-k' support; for more
	information, see these subthreads on the automake-patches list:
	  - 2010-11-15, "Testsuite failures on HP-UX 11.23",