@@ -1,3 +1,10 @@
+2011-01-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Bump copyright years.
+	* aclocal.in (write_aclocal, version): Bump copyright years.
+	* automake.in (gen_copyright, version): Likewise.
+	* doc/automake.texi: Likewise.
+
 2010-12-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 	    Stefano Lattarini  <stefano.lattarini@gmail.com>
 
